kubernetes/kubernetes.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-04-02 - 15:50:20 +0000
  labels:
    app.kubernetes.io/name: kubernetes-config-example
    app.kubernetes.io/version: latest
  name: kubernetes-config-example
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: kubernetes-config-example
      app.kubernetes.io/version: latest
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2023-04-02 - 15:50:20 +0000
      labels:
        app.kubernetes.io/name: kubernetes-config-example
        app.kubernetes.io/version: latest
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: jeremydavis/kubernetes-config-example:latest
          imagePullPolicy: Always
          name: kubernetes-config-example
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
      serviceAccountName: kubernetes-config-example
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.quarkus.io/build-timestamp: 2023-04-02 - 15:50:20 +0000
  labels:
    app.kubernetes.io/name: kubernetes-config-example
    app.kubernetes.io/version: latest
  name: kubernetes-config-example
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/name: kubernetes-config-example
    app.kubernetes.io/version: latest
  type: ClusterIP
